scss/utilities/_section-containers.scss
@use '../custom' as *;
@use '../utilities/mixins' as *;
@use '../utilities/breakpoints' as *;

.full-page {
    position: relative;
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
    
    &.is-active {
        right: 275px;
        overflow-y: scroll;
        @include respond-to-up(md) {
            right: 333px;
        }
    }
}

// Inner Styling
.inner {
    position: relative;
    width: 100%;
    max-width: 75rem; //1200px
    
    margin: 0 auto;
    padding: 0 0.938rem; //15px
    
    // border: 1px solid purple;
    
    /* ------------------------------- Breakpoints ------------------------------ */
    // width=750px from 768px to 992px viewport
    @media only screen and (min-width: 768px) and (max-width: 991px) {
        max-width: 46.875rem; //750px
    }
    
    // width=970px from 993px to 1260px viewport
    @media only screen and (min-width: 992px) and (max-width: 1259px) {
        max-width: 60.625rem; //970px
    }
}

// Page content
.page-container {
    position: relative;
    width: 100%;
    z-index: 0;
    height: fit-content;
    // border: 2px solid gold;
    
    &.is-active {
        // right: 275px;
        width: 100%;
        overflow-y: scroll;
        
        @include respond-to-up(md) {
            // right: 333px;
        }
        
        /* For when header is fixed */
        header {
            // left: -275px;
            
            @include respond-to-up(md) {
                // left: -17px;
            }
        }
    }
}

.main-content {
    
}

// Remove padding from rows and wrappers
.row, .container, .card-wrapper, .wrapper {
    padding: 0 !important;
    margin: 0;
}

.wrapper {
    position: relative;
    width: 100%;
    
    // border: 2px solid limegreen;
}

